--- a/salad-vue/src/assets/main.css
+++ b/salad-vue/src/assets/main.css
@@ -50,6 +50,15 @@ h5 {
   height: 100vh;
 }
 
+@media (max-width: 380px) {
+  h1 {
+    font-size: 24px;
+  }
+  .inputBox {
+    height: 56px !important;
+  }
+}
+
 /* #app {
   max-width: 1280px;
   margin: 0 auto;
