--- a/salad-vue/src/assets/main.css
+++ b/salad-vue/src/assets/main.css
@@ -48,14 +48,38 @@ h5 {
 #app {
   padding: 0 20px;
   height: 100vh;
+  overflow: auto;
 }
+#app::-webkit-scrollbar {
+  width: 8px;
+  margin: 20px 0;
+}
+#app::-webkit-scrollbar-track {
+  background-color: #f6f6f6;
+  border-radius: 10px;
+}
+#app::-webkit-scrollbar-thumb {
+  background-color: #999;
+  border-radius: 10px;
+}
+#app::-webkit-scrollbar-button {
+  display: none;
+}
+
+.v-overlay {
+  max-width: 480px !important;
+}
+.v-overlay__scrim {
+  position: absolute !important;
+}
+
 
 @media (max-height: 780px) {
   h1 {
     font-size: 24px;
   }
   .inputBox {
-    height: 56px !important;
+    /* height: 56px !important; */
   }
 }
 
